CSS - Fix spacing

--- a/docroot/sites/default/themes/maxim_base/css/global.css
+++ b/docroot/sites/default/themes/maxim_base/css/global.css
@@ -203,7 +203,7 @@ h1,h2,h3,h4,h5,h6,.field-name-field-channel a,h1#page-title,.item-list .pager
 #region-sidebar-first .block-home-page-daily5 .block-inner .view-content { padding:0 10px; }
 #region-sidebar-first .block-home-page-daily5 .block-inner .sidebar-list { margin-top:10px; }
 #region-sidebar-first .block-home-page-daily5 .block-inner .view-footer hr { width:90%; color:#EDF5F9; margin:40px auto 10px; }
-#region-sidebar-first .block-home-page-promo-block-3 .block-inner .view-footer hr { width:100%; color:#EDF5F9; margin:0; }
+#region-sidebar-first .block-home-page-promo-block-3 .block-inner .view-footer hr { width:100%; color:#EDF5F9; margin:0; margin-bottom:20px; }
 
 /* sidebar article list */
 .sidebar-list { text-align:center; }
